# archived

./: .gitignore  CONTACT_SETUP.md  RATE_LIMITING.md  TESTING_GUIDE.md  TODO.md  env_example.txt  pyproject.toml
.cursor/rules/: general.mdc
backend/: .coverage  API_DOCUMENTATION.md  README.md  config.py  database.py  main.py  models.py  pyproject.toml  reset_db.py  schemas.py
backend/auth/: auth_handler.py
backend/maintenance/: tag_cleanup.py
backend/routers/: auth.py  collections.py  contact.py  images.py  items.py  share.py  users.py  utils.py
backend/tests/: conftest.py  test_auth.py  test_collections.py  test_contact.py  test_images.py  test_items.py  test_share.py  test_users.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.tsx  config.ts  index.css
frontend/src/components/: AddFruitForm.tsx  CollectionCard.tsx  ConfirmModal.tsx  ContactForm.tsx  CreateCollectionForm.tsx  CreateItemForm.tsx  Fruits.tsx  ImageCarousel.tsx  ImageCarouselEdit.tsx  ItemCard.tsx  ItemDetailModal.tsx  ItemEditModal.tsx  Login.tsx  LoginForm.tsx  NavBar.tsx  Register.tsx  RegisterForm.tsx  SearchBar.tsx  SortDropdown.tsx  TagInput.tsx  UserProfile.tsx
frontend/src/components/__tests__/: ContactForm.test.tsx  LoginForm.test.tsx  NavBar.test.tsx  RegisterForm.test.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/contexts/__tests__/: AuthContext.test.tsx
frontend/src/pages/: AddItemPage.tsx  CollectionDetailPage.tsx  CollectionsPage.tsx  ContactPage.tsx  HomePage.tsx  ItemDetailPage.tsx  LoggedOutPage.tsx  LoginPage.tsx  RegisterPage.tsx  SharedCollectionPage.tsx  UserProfilePage.tsx
frontend/src/styles/components/: CollectionCard.module.css  ConfirmModal.module.css  ContactForm.module.css  CreateCollectionForm.module.css  CreateItemForm.module.css  ImageCarousel.module.css  ImageCarouselEdit.module.css  ItemCard.module.css  ItemDetailModal.module.css  LoginAndRegister.module.css  NavBar.module.css  SearchBar.module.css  SortDropdown.module.css  TagInput.module.css
frontend/src/styles/pages/: CollectionDetailPage.module.css  CollectionsPage.module.css  ContactPage.module.css  ItemDetailPage.module.css
frontend/src/test/: setup.ts  test-utils.tsx
