[project]
name = "backend"
version = "0.1.0"
description = "Backend for the archived project"
authors = [
    {name = "Jerry Xiao",email = "jexiao8211@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pytest (>=8.4.0,<9.0.0)",
    "pytest-asyncio (>=1.0.0,<2.0.0)",
    "pytest-cov (>=6.1.1,<7.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "bcrypt (>=4.0.1,<5.0.0)"
]


[tool.poetry]
package-mode = false
name = "backend"
version = "0.1.0"
description = "Backend for the archived project"
authors = ["Jerry Xiao <jexia8211@gmail.com>"]
packages = [
    { include = "backend" }
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
